Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11338

Not getting key released event in landscape mode on N8 9.2.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.0
    • 4.6.3
    • None
    • None
    • 998ba966215482048f7fa93908212b1ee4a0c357, 5a3246b198ced3634bd974919e78310d536be27e, 041570ca54824ee358593f112b38e26632c3ebbf

    Description

      This bug is cloned from https://bsetpl02.americas.nokia.com/browse/BR-3534. This is QT top error

      In landscape VKB entry QGraphicsTextItem (do not know about other Qt items) doesn't get key released event (handled by keyReleaseEvent method). The key pressed event is received instead. In portrait mode the key released event is received but not the key pressed event. This was discovered because the keyReleaseEvent() method in GTextLineItem object used by URL entry isn't being called in landscape mode (except when backspace is pressed).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            axisnokia axisnokia (Inactive)
            h2lu Hao Lu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes