Fixed key event handling on Symbian.

After looking at QTBUG-11338 and Qt's behavior, it became clear that
we needed more state tracking in the key event handling code, to be
able to handle all the different ways that we can get key events.
This inspired having three states for each used scan code, instead of
the old code, which only took the current scan code into account.
This should make Symbian behave identically to Linux.

Task:     QTBUG-11338
AutoTest: N/A, platform specific code. There was lots of manual
          testing on 5800, N97 and N95.
RevBy:    Jason Barron
(cherry picked from commit 041570ca54824ee358593f112b38e26632c3ebbf)